// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test DirectoryItem should render correctly 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="img-container selected"
    >
      <img
        src="img/folder.svg"
      />
    </div>
    <div
      class="name selected"
    >
      directory
    </div>
  </div>
</div>
`;

exports[`test DirectoryItem should render correctly 2`] = `
<div>
  <div
    class="container"
  >
    <div
      class="img-container"
    >
      <img
        src="img/folder.svg"
      />
    </div>
    <div
      class="name"
    >
      directory
    </div>
  </div>
</div>
`;
